packages/silkenweb/tests/macro-ui/derive-element-unknown-attr.stderr
error: Expected `element(target)`
 --> tests/macro-ui/derive-element-unknown-attr.rs:4:20
  |
4 | struct MyElement(#[element(target, xyz)] Div);
  |                    ^^^^^^^^^^^^^^^^^^^^
