packages/silkenweb/tests/macro-ui/derive-element-unknown-attr.rs
use silkenweb::{elements::html::Div, Element};

#[derive(Element)]
struct MyElement(#[element(target, xyz)] Div);

fn main() {}
